# carrier-accounting-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.api  Dockerfile.mcp  Dockerfile.web  README.md  README_PYPI.md  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt  server.json
.claude/: settings.local.json
.github/workflows/: ci.yml  codeql.yml
Direct bill sample data/Direct bill Automation/: Benecon 1440.00.xlsx  Berkley Net 262.05.xlsx  CNA_4207.60.xlsx  Cason Grp 2184.28.xlsx  Guard 1615.54.csv  Principal 4192.21.csv  Protective 378.66.csv  Summit 16417.11.xlsx
api/: auth.py  dependencies.py  main.py
api/models/: schemas.py
api/routes/: admin.py  carriers.py  health.py  ingestion.py  monitoring.py  onboarding.py  posting.py  reconciliation.py  review.py  sandbox.py
carrier_configs/: carrier_template.yaml
dashboard/: daily_monitoring.py
data_lake/queries/: check_duplicate.sql  daily_metrics.sql  validate_policy.sql
data_lake/schemas/: audit_tables.sql  (+1 more)
deploy/: Caddyfile  README.md  deploy.sh  docker-compose.prod.yml
docs/: adding_carriers.md  mcp-documentation.md  privacy-policy.md  trial_run_guide.md
gpt/: assistant_id.txt  create_assistant.py  custom_gpt_config.md  openapi_spec.yaml
mcp_server/: config.py  server.py  server_http.py
platform_db/: models.py  tenant_context.py  tenant_manager.py
reference/: learned_mappings.json
reports/: ingestion_test_report.json
scripts/: run_sample_ingestion.py
tests/: test_epic_batch_import.py  test_epic_ui_automation.py  test_ingestion.py  test_local_ingestion.py  test_normalization.py  test_reconciliation.py  test_validation.py
web/: .env.local.example  next.config.js  package.json  tailwind.config.js
(+49 files in other folders)
